# gl_testing

./: CMakeLists.txt
code/: CMakeLists.txt  TODO.txt  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  cubemap.frag  cubemap.vert  fbo.frag  fbo.vert  light.frag  light.vert  light_manager.cpp  light_manager.hpp  main.cpp  mesh.cpp  mesh.hpp  normal.frag  normal.geom  normal.vert  outliner.frag  program_manager.cpp  program_manager.hpp  scene.cpp  scene.hpp  scene_manager.cpp  shader.frag  shader.geom  shader.vert  shaders.cpp  shaders.hpp  shadow.frag  shadow.geom  shadow.vert  system.cpp  system.hpp  texture.cpp  texture.hpp  vao_manager.cpp  vao_manager.hpp  (+2 more)
code/assets/: container.fbx  cubes.fbx  floor.fbx  light_test.fbx  makelinks.bat  quad.fbx  scene.fbx  scene_2.mtl  scene_3.fbx  shader.vert  shadow.vert  shadow_test.fbx  skybox.fbx  test_1.fbx
